# graphics-demos

./: README.md
t2/: CMakeLists.txt  README
t2/src/: Box2.hpp  CMakeLists.txt  Color.hpp  Element.cpp  Element.hpp  Event.hpp  EventListener.hpp  EventSource.cpp  EventSource.hpp  Game.cpp  Game.hpp  HardwareBuffer.cpp  HardwareBuffer.hpp  InputSystem.cpp  InputSystem.hpp  Interface.hpp  Main.cpp  Matrix3.hpp  Matrix4.hpp  Mesh.cpp  Mesh.hpp  MeshBuilder.hpp  Player.cpp  Player.hpp  Rectangle.cpp  Rectangle.hpp  Renderer.cpp  Renderer.hpp  Sector.cpp  Sector.hpp  Shader.cpp  Shader.hpp  SimpleVertex.cpp  SimpleVertex.hpp  System.cpp  System.hpp  Vector2.hpp  Vector3.hpp
t3/: CMakeLists.txt  propuesta.tex
t3/samples/: test1.xml  test2.xml  test3.xml  test4.xml
t3/src/: Application.cpp  Application.hpp  CMakeLists.txt  Color.hpp  CommonCL.hpp  Display.cpp  Display.hpp  Geometry.hpp  Image.cpp  Image.hpp  Matrix3.hpp  Matrix4.hpp  Noise.hpp  Raytracer.cl  Raytracer.cpp  Raytracer.hpp  Scene.cpp  Scene.hpp  Tarea3.cpp  Threading.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorCL.hpp
